kubernetes/observability/observability-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability 
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /prom(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
      - path: /graf(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
